<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UpDataStudentInformationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/update_stud_infor_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/updateTitle" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_name"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_name" />

                <EditText
                    android:id="@+id/edt_i_name"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_sex"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_sex" />

                <EditText
                    android:id="@+id/edt_i_sex"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_in"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_in" />

                <EditText
                    android:id="@+id/edt_i_in"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_symbol"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_symbol" />

                <EditText
                    android:id="@+id/edt_i_symbol"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_health"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_health" />

                <EditText
                    android:id="@+id/edt_i_health"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_birthplace"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_birthplace" />

                <EditText
                    android:id="@+id/edt_i_birthplace"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_homeaddr"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_homeaddr" />

                <EditText
                    android:id="@+id/edt_i_homeaddr"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_postcode"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_postcode" />

                <EditText
                    android:id="@+id/edt_i_postcode"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_intime"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_intime" />

                <EditText
                    android:id="@+id/edt_i_intime"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_study"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_study" />

                <EditText
                    android:id="@+id/edt_i_study"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_contactaddr"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_contactaddr" />

                <EditText
                    android:id="@+id/edt_i_contactaddr"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_i_schoolpost"
                    style="@style/UpdataStudentInformationTextView"
                    android:text="@string/i_schoolpost" />

                <EditText
                    android:id="@+id/edt_i_schoolpost"
                    style="@style/UpdataStudentInformationEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_margin="8dp"
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/teachaer_btn"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/colorAccent" />


                <Button
                    android:layout_margin="8dp"
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/teachaer_btn"
                    android:text="@string/btn_save"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>