<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".UpdatePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/update_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/nav_update" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/affirm_account"
        android:textColor="@color/PrimaryText"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edt_accout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textCursorDrawable="@drawable/bg_edittext"
        android:theme="@style/MyEditText" />

    <Button
        android:id="@+id/btn_affirm_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_login"
        android:text="@string/determined"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/update_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/bg_edittext"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/bg_edittext"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edt_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/bg_edittext"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_determined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_login"
            android:text="@string/determined"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>